Save real time location

--- a/ThePersonalTrainerClub/app/src/main/res/layout/activity_add_location.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/activity_add_location.xml
@@ -50,7 +50,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:textColor="@android:color/black"
-        android:textColorHint="@color/lightGray"
+        android:textColorHint="@android:color/darker_gray"
         android:hint="@string/add_location_location_description_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,12 +64,25 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:textColor="@android:color/black"
-        android:textColorHint="@color/lightGray"
+        android:textColorHint="@android:color/darker_gray"
         android:gravity="center"
         android:hint="@string/add_location_location_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descriptionText" />
+
+    <include
+        android:id="@+id/currentLocationButton"
+        layout="@layout/button_custom"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/locationText" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -78,25 +91,45 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:orientation="horizontal"
-        android:weightSum="2"
+        android:weightSum="4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/locationText">
+        app:layout_constraintTop_toBottomOf="@+id/currentLocationButton">
 
-        <include
-            android:id="@+id/currentLocationButton"
-            layout="@layout/button_custom"
-            android:layout_weight="1"
+        <EditText
+            android:id="@+id/searchLocationText"
             android:layout_width="0dp"
-            android:layout_marginRight="2dp"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_weight="3"
+            android:hint="@string/add_location_location_description_placeholder"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/darker_gray" />
 
         <include
             android:id="@+id/searchLocationButton"
             layout="@layout/button_custom"
-            android:layout_marginLeft="2dp"
-            android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginLeft="2dp"
+            android:layout_weight="1" />
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/loading"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="invisible"/>
+
 </android.support.constraint.ConstraintLayout>
