SCH: Add open classes list to trainer management.

--- a/ThePersonalTrainerClub/app/src/main/res/layout/fragment_trainer_management.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/fragment_trainer_management.xml
@@ -131,8 +131,8 @@
                     tools:text="@string/trainer_management_locations_label" />
 
                 <include
-                    android:id="@+id/listview"
-                    layout="@layout/activity_class_list"
+                    android:id="@+id/locationsListview"
+                    layout="@layout/activity_location_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -153,25 +153,22 @@
                     android:textColor="@android:color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/listview"
+                    app:layout_constraintTop_toBottomOf="@+id/locationsListview"
                     app:layout_constraintVertical_bias="0.0"
                     tools:text="@string/trainer_management_open_classes_label" />
 
-                <FrameLayout
-                    android:id="@+id/openClassesFrameLayout"
+                <include
+                    android:id="@+id/openClassesListview"
+                    layout="@layout/activity_class_list"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/openClassesLabel">
-                </FrameLayout>
+                    app:layout_constraintTop_toBottomOf="@+id/openClassesLabel" />
 
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
     </LinearLayout>
-
 </FrameLayout>
 
