--- a/ThePersonalTrainerClub/app/src/main/res/layout/activity_class_row.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/activity_class_row.xml
@@ -31,7 +31,8 @@
                 android:layout_height="100dp"
                 android:layout_weight="4"
                 android:background="@color/darkGray"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_width="wrap_content">
 
                 <TextView
                     android:id="@+id/text_name_sport"
@@ -51,7 +52,7 @@
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="@dimen/med_dp"
-                    app:srcCompat="@drawable/ic_icon" />
+                    app:srcCompat="@drawable/ic_add_activity" />
 
             </LinearLayout>
 
@@ -59,7 +60,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/darkGray"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_width="0dp">
 
                 <ImageView
                     android:id="@+id/imageView9"
@@ -81,32 +83,33 @@
                     android:id="@+id/imageView7"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
-                    android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp"
-                    app:srcCompat="@drawable/ic_icon" />
+                    android:layout_marginBottom="2dp"
+                    app:srcCompat="@mipmap/time_50" />
 
                 <ImageView
                     android:id="@+id/imageView6"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
-                    android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp"
-                    app:srcCompat="@drawable/ic_icon" />
+                    android:layout_marginBottom="2dp"
+                    app:srcCompat="@drawable/ic_user_male" />
 
                 <ImageView
                     android:id="@+id/imageView5"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
-                    android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp"
-                    app:srcCompat="@drawable/ic_icon" />
+                    android:layout_marginBottom="2dp"
+                    app:srcCompat="@mipmap/price_50" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
                 android:background="@color/darkGray"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_width="0dp">
 
                 <View
                     android:id="@+id/divider"
@@ -131,12 +134,12 @@
                     tools:text="12 Septiembre 2018" />
 
                 <TextView
-                    android:id="@+id/text_time_class"
+                    android:id="@+id/text_duration_class"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:text="@string/fragment_class_time"
                     android:textColor="@color/text"
-                    tools:text="De 16:00 a 17:00" />
+                    tools:text="45min" />
 
                 <TextView
                     android:id="@+id/text_number_pupils_class"
@@ -196,35 +199,35 @@
                     android:padding="4dp">
 
                     <TextView
-                    android:id="@+id/text_name_coach_class"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Trainer"
-                    android:textColor="@color/text" />
+                        android:id="@+id/text_name_coach_class"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Trainer"
+                        android:textColor="@color/text" />
 
                     <TextView
-                    android:id="@+id/text_lastname_coach_class"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Name"
-                    android:textColor="@color/text" />
+                        android:id="@+id/text_lastname_coach_class"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Name"
+                        android:textColor="@color/text" />
                 </LinearLayout>
 
                 <Button
-                android:id="@+id/button_vote_class"
-                style="?attr/buttonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:text="@string/fragment_button_vote"
-                android:visibility="visible" />
+                    android:id="@+id/button_vote_class"
+                    style="?attr/buttonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:text="@string/fragment_button_vote"
+                    android:visibility="visible" />
 
                 <Button
-                android:id="@+id/button_cancel_class"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:text="@string/fragment_button_cancel" />
+                    android:id="@+id/button_cancel_class"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:text="@string/fragment_button_cancel" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
