activity_add_class terminada a falta de revision y ponerle una cabecera

--- a/ThePersonalTrainerClub/app/src/main/res/layout/activity_location_row.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/activity_location_row.xml
@@ -4,22 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:background="@drawable/rounded_orange_border"
-    android:orientation="horizontal">
+    android:background="@color/lightGray"
+    android:orientation="horizontal"
+    android:padding="@dimen/med_dp">
 
     <TextView
         android:id="@+id/locationName"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_gravity="center"
+        android:layout_weight="6"
         android:textAppearance="?attr/textAppearanceListItem"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/text_normal"
+        tools:text='Gimnasio "el Leon"' />
 
     <ImageView
         android:id="@+id/iconImageView"
-        android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:layout_weight="1"
         app:srcCompat="@drawable/ic_location"
         tools:srcCompat="@drawable/ic_location" />
 
