--- a/ThePersonalTrainerClub/app/src/main/res/values/styles.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/values/styles.xml
@@ -29,4 +29,10 @@
         <item name="android:windowBackground">@drawable/splash</item>
     </style>
 
+    <style name="Seekbar" parent="AppTheme">
+        <item name="android:progressBackgroundTint">#D5D5D5</item>
+        <item name="android:progressTint">#E75D38</item>
+        <item name="android:colorControlActivated">#A31E03</item>
+    </style>
+
 </resources>
