SCH: - Fix login redirection to main when login - Set activity_location_row.xml android:layout_width attribute - Fix to control when no user thumbnail is supplied

--- a/ThePersonalTrainerClub/app/src/main/res/layout/activity_location_row.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/activity_location_row.xml
@@ -16,7 +16,8 @@
         android:textAppearance="?attr/textAppearanceListItem"
         android:textColor="@android:color/black"
         android:textSize="@dimen/text_normal"
-        tools:text='Gimnasio "el Leon"' />
+        tools:text='Gimnasio "el Leon"'
+        android:layout_width="0dp" />
 
     <ImageView
         android:id="@+id/iconImageView"
@@ -24,6 +25,7 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         app:srcCompat="@drawable/ic_location"
-        tools:srcCompat="@drawable/ic_location" />
+        tools:srcCompat="@drawable/ic_location"
+        android:layout_width="0dp" />
 
 </LinearLayout>
