--- a/ThePersonalTrainerClub/app/src/main/res/layout/fragment_trainer_management.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/fragment_trainer_management.xml
@@ -96,7 +96,7 @@
                     android:id="@+id/gridview"
                     layout="@layout/activity_strip_grid"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="70dp"
                     android:layout_marginTop="24dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
