--- a/ThePersonalTrainerClub/app/src/main/res/layout/fragment_trainer_management.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/fragment_trainer_management.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.trainerManagement.TrainerManagementFragment">
+    tools:context=".view.trainerManagement.TrainerManagementFragment"
+    android:tag="TrainerManagementFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
