--- a/ThePersonalTrainerClub/app/src/main/res/layout/cell_class_found.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/cell_class_found.xml
@@ -216,7 +216,7 @@
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/button_cancel_class"
+                    android:id="@+id/button_book_class"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
