--- a/ThePersonalTrainerClub/app/src/main/res/layout/activity_register.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/layout/activity_register.xml
@@ -35,7 +35,7 @@
                 android:inputType="textPersonName"
                 android:textColor="@android:color/black"
                 android:textColorHint="@color/lightGray"
-                app:layout_constraintEnd_toStartOf="@+id/imageFrame"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,28 +51,9 @@
                 android:inputType="textPersonName"
                 android:textColor="@android:color/black"
                 android:textColorHint="@color/lightGray"
-                app:layout_constraintEnd_toStartOf="@+id/imageFrame"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
-
-            <FrameLayout
-                android:id="@+id/imageFrame"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:background="@drawable/rounded_orange_border"
-                app:layout_constraintEnd_toEndOf="parent">
-
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
-                    android:layout_gravity="center_vertical|center_horizontal|center"
-                    android:cropToPadding="false"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@android:drawable/ic_menu_report_image" />
-            </FrameLayout>
 
             <EditText
                 android:id="@+id/emailEditText"
